# xenstore-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  GPL-2.0  README.md
examples/: ownership.rs
libxenstore/: Cargo.toml
libxenstore/src/: client.rs  codec.rs  error.rs  lib.rs  path.rs  request.rs  server.rs  store.rs  system.rs  transaction.rs  watch.rs  wire.rs
libxenstore/src/message/: egress.rs  ingress.rs  mod.rs
rxenstore-utils/: Cargo.toml
rxenstore-utils/src/: main.rs
rxenstored/: Cargo.toml
rxenstored/src/: main.rs
scripts/: check-format
src/: connection.rs  errors.rs  lib.rs  path.rs  server.rs  store.rs  system.rs  transaction.rs  watch.rs  wire.rs
src/message/: egress.rs  ingress.rs  mod.rs
