[package]
name = "xenstore"
description = "An implementation of the information storage space daemon for Xen"
license = "GPL-2.0"
version = "0.0.0"
authors = ["Jonathan Creekmore <jonathan.creekmore@starlab.io>",
            "Doug Goldstein <doug@starlab.io>"]

[dependencies]
lazy_static = "0.2.1"
log = "^0.3"
