[package]
name = "xenstore"
description = "An implementation of the information storage space daemon for Xen"
license = "GPL-2.0"
version = "0.0.0"
authors = ["Jonathan Creekmore <jonathan.creekmore@starlab.io>",
            "Doug Goldstein <doug@starlab.io>"]

[dependencies]
bitflags = "0.7.0"
docopt = "^0.6"
lazy_static = "0.2.1"
log = "^0.3"
mio = "0.5.1"
rand = "0.3.14"
rustc-serialize = "^0.3"
stderrlog = "^0.2.1"
