[package]
name = "libxenstore"
description = "An implementation of the information storage space daemon for Xen"
license = "GPL-2.0"
version = "0.0.0"
authors = ["Jonathan Creekmore <jonathan.creekmore@starlab.io>",
            "Doug Goldstein <doug@starlab.io>"]

[dependencies]
byteorder = "0.5.3"
log = "^0.3"
mio = "0.5.1"
rand = "0.3.14"
rustc-serialize = "^0.3"
try_opt = "0.1.1"

[dev-dependencies]
quickcheck = "0.2"
