[package]
name = "libxenstore"
description = "An implementation of the information storage space daemon for Xen"
license = "GPL-2.0"
version = "0.0.0"
authors = ["Jonathan Creekmore <jonathan.creekmore@starlab.io>",
            "Doug Goldstein <doug@starlab.io>"]

[dependencies]
bytes = "^0.4"
futures = "^0.1"
log = "^0.3"
mio = "0.5.1"
rand = "0.3.14"
rustc-serialize = "^0.3"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-proto = "^0.1"
tokio-service = "^0.1"
tokio-uds = "^0.1"
tokio-uds-proto = "^0.1"

[dev-dependencies]
quickcheck = "0.2"
